--- a/articulo.html
+++ b/articulo.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Aqui vamos hacerl el blog del post</h1>
     <p>Y este es el parrafo de inicio</p>
+    <p>Este es un segundo parrafo</p>
 </body>
 </html>
