--- a/articulo.html
+++ b/articulo.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos hacerl el blog del post</h1>
-    <p>Y este es el parrafo de inicio</p>
-    <p>Este es un segundo parrafo</p>
+    <DIV id="container">
+        <div id="post">
+            <h1>Aqui vamos hacerl el blog del post</h1>
+            <p>Y este es el parrafo de inicio</p>
+             <p>Este es un segundo parrafo</p>
+
+        </div>
+    </DIV>
+    
 </body>
 </html>
