--- a/articulo.html
+++ b/articulo.html
@@ -10,9 +10,11 @@
 <body>
     <DIV id="container">
         <div id="post">
-            <h1>Aqui vamos hacerl el blog del post</h1>
-            <p>Y este es el parrafo de inicio</p>
-             <p>Este es un segundo parrafo</p>
+            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles
+                que se puede hacer con ramas
+            </p>
+             
 
         </div>
     </DIV>
