--- a/articulo.html
+++ b/articulo.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <DIV id="container">
+        <div id="cabecera">  
+
+            cabezera
+        </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles
