--- a/articulo.html
+++ b/articulo.html
@@ -11,7 +11,7 @@
     <DIV id="container">
         <div id="cabecera">  
 
-            cabezera
+            HyperBlog
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
