agregado el contenido adicional del blog y una mejor tipografia

--- a/articulo.html
+++ b/articulo.html
@@ -15,6 +15,10 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles
                 que se puede hacer con ramas
             </p>
+
+            <p>este es un nuevo parrafo para diferenciarlo a la hora de realizar el 
+                marge entre los dos branch esto es el branch master
+            </p>
              
 
         </div>
