--- a/articulo.html
+++ b/articulo.html
@@ -17,6 +17,7 @@
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles
                 que se puede hacer con ramas
+                Se utilizara pull requuest
             </p>
 
             <p>este es un nuevo parrafo para diferenciarlo a la hora de realizar el 
